--- a/Valencia.mw
+++ b/Valencia.mw
@@ -27,9 +27,9 @@ comarca = |
 comarca_link = |
 divisions = 16|
 neighborhoods = 70|
-mayor = Rita Barberá Nolla|
-political_party = PP|
-political_party_link = People's Party (Spain)|
+mayor = Joan Ribó|
+political_party = CC|
+political_party_link = Coalició Compromís|
 area = 134.65|
 altitude = 15|
 population = 807,396|
