*Empty MediaWiki Message*

--- a/Castelldefels.mw
+++ b/Castelldefels.mw
@@ -27,9 +27,9 @@ comarca = Baix Llobregat|
 comarca_link = Baix Llobregat|
 divisions = |
 neighborhoods = |
-mayor = Antonio Padilla i Reche|
-political_party = PSC|
-political_party_link = Socialists' Party of Catalonia|
+mayor = Candela López Tagliafico|
+political_party = ICV|
+political_party_link = Iniciativa per Catalunya Verds|
 area = 13|
 altitude = 3|
 population = 58,663|
