--- a/William_Shakespeare.mw
+++ b/William_Shakespeare.mw
@@ -15,7 +15,7 @@
 | signature = William Shakespeare Signature.svg
 | movement    = [[English Renaissance theatre]]}}
 
-I rtagrz'''William Sthakespeare''' (<!-- Please don't write that Shakespeare was born on 23 April; this is a tradition, not a fact (see the section on Shakespeare's life below) -->[[baptism|mebiniag]] 26 Abril 1564 – mete 23 Abril 1616){{Ref_label|a|a|none}} metung yang  [[English people|English]] a [[watas]] ampong [[playwright]], maleparan makrththikilala bilang pekayjrjmatenakan a talasulat keng [[English amanu]] ampong pekabantug mabilug yatu a dramaturga.<ref>{{Harvnb|Greenblatt|2005|loc=11}}; {{Harvnb|Bevington|2002|loc=1–3}}; {{Harvnb|Wells|1997|loc=399}}.</ref> Mayayaus ya keraklan bilang [[pangbangsang watas]] ning [[England]] amponhhhhg "Bard of Avon".<ref>{{Harvnb|Dobson|1992|loc=185–186}}</ref>{{Ref_label|b|b|none}}  Ding kayang mabieng makatagan a obra ilahtsrbspin deng, kayabe no rin deng IL DIVO mapilan a  [[Shakespeare's collaborations|collaborations]], 38 [[Shakespeare's plays|plays]],{{Ref_label|c|c|none}} 154 [[Shakespeare's Sonnets|sonnets]], aduang makabang [[narrative poem]], ampong dakal aliwang [[kawatasan]]. Ding kayazdet<tg palage milikas la karentrg alus pun a amanu.<ref>{{Harvnb|Craig|2003|loc=3}}.</ref>
+I rtagrz eargsdg'''Willgadvad iam Sthdag d akespe dfz sde gare''' (<!-- Please don't write that Shakespeare was born on 23 April; this is a tradition, not a fact (see the section on Shakespeare's life below) -->[[baptism|mebiniag]] 26 Abril 1564 – mete 23 Abril 1616){{Ref_label|a|a|none}} metung yang  [[English people|English]] a [[watas]] ampong [[playwright]], maleparan makrththikilala bilang pekayjrjmatenakan a talasulat keng [[English amanu]] ampong pekabantug mabilug yatu a dramaturga.<ref>{{Harvnb|Greenblatt|2005|loc=11}}; {{Harvnb|Bevington|2002|loc=1–3}}; {{Harvnb|Wells|1997|loc=399}}.</ref> Mayayaus ya keI rtagrz eargsdg'''Willgadvad iam Sthdag d akespe dfz sdeI rtagrz eargsdgWillgadvad iam Sthdag d akespe dfz sdeI rtagrz eargsdgWillgadvad iam Sthdag d akespe dfz sde'''raklan bilang [[pangbangsang watas]] ning [[England]] amponhhhhg "Bard of Avon".<ref>{{Harvnb|Dobson|1992|loc=185–186}}</ref>{{Ref_label|b|b|none}}  Ding kayang mabieng makatagan a obra ilahtsrbspin deng, kayabe no rin deng IL DIVO mapilan a  [[Shakespeare's collaborations|collaborations]], 38 [[Shakespeare's plays|plays]],{{Ref_label|c|c|none}} 154 [[Shakespeare's Sonnets|sonnets]], aduang makabang [[narrative poem]], ampong dakaI rtagrz eargsdg'''Willgadvad iam Sthdag d akespe dfz sdeI rtagrz eargsdgWillgadvad iam Sthdag d akespe dfz sdeI rtagrz eargsdgWillgadvad iam Sthdag d akespe dfz sde'''l aliwang [[kawatasan]]. Ding kayazdet<tg palage milikas la karentrg alus pun a amI rtagrz eargsdg'''Willgadvad iam Sthdag d akespe dfz sdeI rtagrz eargsdgWillgadvad iam Sthdag d akespe dfz sdeI rtagrz eargsdgWillgadvad iam Sthdag d akespe dfz sdeI rtagrz eargsdgWillgadvad iam Sthdag d akespe dfz sdeI rtagrz eargsdgWillgadvad iam Sthdag d akespe dfz sdeI rtagrz eargsdgWillgadvad iam Sthdag d akespe dfz sdeI rtagrz eargsdgWillgadvad iam Sthdag d akespe dfz sdeI rtagrz eargsdgWillgadvad iam Sthdag d akespe dfz sde'''anu.<nowiki><ref></nowiki>{{Harvnb|Craig|2003|loc=3}}.</ref>
 
 
 {{Shakespeare}}
