--- a/Fene.mw
+++ b/Fene.mw
@@ -8,7 +8,7 @@ map_caption = Location of '''Fene''' within [[Galicia (Spain)|Galicia]] |
 subdivision_type = [[Parroquia]]s|
 subdivision_name = 8|
 leader_title = Alcalde ([[Mayor]]) |
-leader_name = Xosé María Rivera Arnoso|
+leader_name = Juventino Trigo Rey (BNG)|
 area_note = |
 area_magnitude = 1 E7|
 area_total_km2 =  25.9|
