One picture in higher resolution, Valued Image on Commons

--- a/Bavaria.mw
+++ b/Bavaria.mw
@@ -427,7 +427,7 @@ Urban distritu:
 <gallery>
 Image:Aschaffenburg Schloss Johannisburg.jpg|Johannisburg Castle in [[Aschaffenburg]]
 Image:Wuerzburger_Residenz_vom_Hofgarten.jpg|Residenz in [[Würzburg]]
-Image:BambergDom.jpg|Cathedral in [[Bamberg]]
+Image:Bamberger Dom BW 6.JPG|Cathedral in [[Bamberg]]
 Image:Vierzehnheiligen I.JPG|[[Vierzehnheiligen]]
 Image:Bayreuth_Festspielhaus_2006-07-16.jpg|Festspielhaus of [[Richard Wagner]] in [[Bayreuth]]
 Image:Nuremberg sebald castle f lorenz f s.jpg|Imperial Castle in [[Nürnberg]] 
