--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -23,7 +23,7 @@ Ing '''Kapampangan Ku Pagmaragul Ku (KKPK) International Inc.'''<ref>{{cite news
 Ing Pangunahing layunin ning KKPK para apisanmetung nala ding Kapampangan, mamyeng serbisyu, Agricultura at Serbisyu para queng Calicasan. Siguraduan ing ustung pamagbayu at pamanyulung. Queng plataporma ning KKPK regular dang gagawan ing misyun at proyektu queng miyaliwang lugar ning Pampanga at aliwang lugar na sasacupan ning Kapampangan queng miyaliwang actibidad. calupa ning pamamyeng regalu careng Home For the Aged, Orphanage at careng Aeta’s, Clean up Dirve, Tree Planting at pamamyeng vegetable seedlings.<ref>[http://santaritapampanga.gov.ph/index.php/about-santa-rita/news-events/181-mymp-public-service There was also a distribution of seeds and pesticides by "Kapampangan Ku Pagmaragul Ku". (Municipality of Sta Rita Official Website)]</ref> 
 
 
-==Partikular na Layunin==
+==Layunin==
 
 *Para asopan la ding Kapampangan.
 *Para pagmaragul ing Lahing Kapampangan.
