--- a/Ilokanu_(amanu).mw
+++ b/Ilokanu_(amanu).mw
@@ -57,6 +57,9 @@ Darakal la murin deng Ilucanu king [[w:Middle East|Libutad a Aslagan]], [[Hong K
 |-
 | Panupaya yu o pasensya na kayu                 || Pakawan or Dispensar
 |-
+|Kantut mo ate ko
+|butasin si Aliah
+|-
 | Mamun naku o Mako naku o Sigi     || Agpakadaakon or Kastan/Kasta pay (Till then) or Sige (Okay) or Innakon (I'm going)
 |}
 
