*Empty MediaWiki Message*

--- a/Felix_Galura.mw
+++ b/Felix_Galura.mw
@@ -9,3 +9,4 @@ Y '''Felix Galura''' metung yang [[Kapampangan]] [[watas]].
 {{DEFAULTSORT:Galura, Felix}}
 {{Watas-stub}}
 [[Category: Kapampangan Watas]]
+kapogiam
