*Empty MediaWiki Message*

--- a/Durlangen.mw
+++ b/Durlangen.mw
@@ -1,7 +1,7 @@
 {{Expand German|topic=geo|date=February 2009}}
 
 {{Infobox German location
-|Wappen            = Durlangen-wappen.png
+|Wappen            = Durlangen-wappen.svg
 |lat_deg           = 48 |lat_min = 51 |lat_sec = 31
 |lon_deg           = 09 |lon_min = 47 |lon_sec = 40
 |Lageplan          = 
