*Empty MediaWiki Message*

--- a/Neuler.mw
+++ b/Neuler.mw
@@ -1,7 +1,7 @@
 {{Expand German|topic=geo|date=February 2009}}
 
 {{Infobox German location
-|Wappen            = Wappen Neuler.png
+|Wappen            = Wappen Neuler.svg
 |lat_deg           = 48 |lat_min = 55 |lat_sec = 43
 |lon_deg           = 10 |lon_min = 04 |lon_sec = 10
 |Lageplan          = 
