--- a/Taipei.mw
+++ b/Taipei.mw
@@ -16,7 +16,7 @@
 |image_caption          =  
 |image_flag             = Flag of Taipei City.svg
 |flag_size              =
-|image_seal             = Taipei City seal.svg
+|image_seal             = Emblem of Taipei City.svg
 |seal_size              =
 |image_shield           = 
 |shield_size            =
