*Empty MediaWiki Message*

--- a/Baculud.mw
+++ b/Baculud.mw
@@ -68,7 +68,7 @@
 | 2030 = 		
 |}}
 
-Ing '''Baculud'''{{citation needed|reason=Your explanation here|date=Hunyu 2015}} pangapat yang klasing [[balen]] king [[lalawigan]] ning [[Pampanga]], [[Filipinas]]. Agpang keng  [[2000]] sensus, atin yang papulasyun a 16,147 a katau ka reng 3,029 pamimalemale.
+Ing '''Baculud''' pangapat yang klasing [[balen]] king [[lalawigan]] ning [[Pampanga]], [[Filipinas]]. Agpang keng  [[2000]] sensus, atin yang papulasyun a 16,147 a katau ka reng 3,029 pamimalemale.
 
 ==Historia==
 
