--- a/Kalibo.mw
+++ b/Kalibo.mw
@@ -161,7 +161,7 @@ Pipagaralan (Mababa) king Kalibo
 * CBIS Kalibo : DYMK
 
 ==Kasusug Kilwal==
-*[http://mytkal10.freehostia.com/profi.html Infosite of Kalibo, Aklan]
+*[http://kalibo.org Infosite of Kalibo, Aklan]
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.t-macs.com/kiso/local/ 2000 Philippine Census Information]
 *[http://www.google.com/maps?q=kalibo+philippines&t=k&hl=en google.com Satellite Image of KALIBO]
