--- a/Aisne.mw
+++ b/Aisne.mw
@@ -13,9 +13,9 @@ Ing '''Aisne''' metung yang ''[[département in France|département]]'' king pan
 == Kasusug Kilwal ==
 {{commonscat|Aisne}}
 * [http://www.aisne.pref.gouv.fr/ Prefecture website] (in French)
-* [http://www.cg02.fr/ Conseil Général website] (in French)
-* [http://www.aisneco.com/pages/business/business.php Set up your business in Aisne] (in English)
-* [http://www.cm-aisne.fr/pages/index.php Chamber of Trades of Aisne] (in French)
+* [http://aisne.com/ Conseil départemental website] (in French)
+* [http://www.aisneco.com/The-Aisne-a-departement-of-opportunities Set up your business in Aisne] (in English)
+* [http://www.cma-aisne.fr/ Chamber of Trades of Aisne] (in French)
 * [http://www.agri02.com/index.php Aisne Chamber of Agriculture] (in French)
 * [http://www.aisne-developpement.com/gb/index.php Aisne Development Agency] (in English)
 * [http://www.sudaisne.com/Departement/aisne.html] (in French)
