*Empty MediaWiki Message*

--- a/Teen_Top.mw
+++ b/Teen_Top.mw
@@ -9,11 +9,13 @@ Ing '''Teen Top''' ([[Hangul]]: 틴탑), metung yang banda king [[Mauling Korea]
 * Ricky (Yoo Chang-hyun 유창현)
 * Changjo (Choi Jong-hyun 최종현)
 
-==Pikuwanan ning Impormasyun==
+==Dalerayan==
 {{reflist}}
 
 ==Suglung Palwal==
-* [http://www.teentop.co.kr/ Opisyal na Sityo]
+* [http://www.teentop.co.kr/ Opisyal a Sityu]
+* [http://www.teentop.jp/ Official Japanese Website]
+* {{twitter|TEEN_TOP|Teen Top}}
 
 {{suli}}
 
