Removing "T.Phillips_2009.jpg", it has been deleted from Commons by [[commons:User:Dharmadhyaksha|Dharmadhyaksha]] because: Copyright violation; see [[:c:COM:Licensing|Commons:Licensing]] -  Using [[:c:COM:VFC|VisualFileChange]]..

--- a/Todd_Phillips.mw
+++ b/Todd_Phillips.mw
@@ -1,7 +1,7 @@
 {{About|king direktor pelikula|king musikerung bahero (''bass musician'')|Todd Phillips (musikeru)}}
 {{Infobox person
 | name                  = Todd Phillips
-| image                 = T.Phillips 2009.jpg
+| image                 =
 | caption               = I Phillips anyang 2009
 | birth_date             = {{Birth date and age|1970|12|20}}
 | birth_name            = Todd Bunzl
