*Empty MediaWiki Message*

--- a/Yousuke_Itou.mw
+++ b/Yousuke_Itou.mw
@@ -8,3 +8,5 @@ I '''Yousuke Itou''' (伊藤 陽佑 ''Itō Yōsuke''), metung yang artista at ta
 * [http://twitter.com/LITOjp Yousuke Itou's Twitter account]
 
 {{stub}}
+
+[[Category:Deng artista king Hapon]]
