*Empty MediaWiki Message*

--- a/New_Orleans,_Louisiana.mw
+++ b/New_Orleans,_Louisiana.mw
@@ -1,9 +1,17 @@
-{{Infobox City |official_name =Lakanbalen ning New Orleans|native_name=Ville de La Nouvelle-Orléans
-|nickname = "The Crescent City", "The Big Easy", "The City That Care Forgot", "NOLA" (acronym for New Orleans, LA)
-|website = http://www.cityofno.com/portal.aspx
-|image_skyline = New Orleans Skyline from Uptown.jpg
-|image_flag =Flag_of_New_Orleans,_Louisiana.svg
-|image_seal =
+{{Infobox City |official_name =New Orleans| GOT NOLA ? 
+|nickname = "HOME OF THE TWERKING CLASS QUEENS" 
+We BOUT DAT TWERK
+
+We BOUT DEM SAINTS
+
+We BOUT THIS LIFE 
+
+WE ARE THE QUEENS OF NEW ORLEANS .....
+
+AMEN   
+AWOMEN  
+ATRANDGENSER!
+
 |image_map =Map_of_Louisiana_and_USA_highlighting_Orleans_Parish.png
 |map_caption = Location in the State of [[Louisiana]] and the [[United States]]
 |subdivision_type  = [[Countries of the world|Bangsa]]
