--- a/New_Orleans,_Louisiana.mw
+++ b/New_Orleans,_Louisiana.mw
@@ -9,10 +9,12 @@ We BOUT THIS LIFE
 WE ARE THE QUEENS OF NEW ORLEANS .....
 
 AMEN   
-AWOMEN  
-ATRANDGENSER!
+AWOMAN
+ATRANSGENDER!
 
-|image_map =Map_of_Louisiana_and_USA_highlighting_Orleans_Parish.png
+SHOUT OUTS TO ALL THE DRAG DIVAS FROM NEW ORLEANS BEFORE KATRINA! 
+
+NO SILICONE INJECTIONS YALL ITS DANGEROUS !
 |map_caption = Location in the State of [[Louisiana]] and the [[United States]]
 |subdivision_type  = [[Countries of the world|Bangsa]]
 |subdivision_type1 = [[Political divisions of the United States|State]]
