*Empty MediaWiki Message*

--- a/New_Orleans,_Louisiana.mw
+++ b/New_Orleans,_Louisiana.mw
@@ -14,7 +14,7 @@ ATRANSGENDER!
 
 SHOUT OUTS TO ALL THE DRAG DIVAS FROM NEW ORLEANS BEFORE KATRINA! 
 
-NO SILICONE INJECTIONS YALL ITS DANGEROUS !
+I remember the pumping parties like it was yesterday ....when the sil was real and the queens got curves and swerves honey .  Miss deloreon no more cheeks for you sista girl . Vivica, put on some lashes for goodness sakes 
 |map_caption = Location in the State of [[Louisiana]] and the [[United States]]
 |subdivision_type  = [[Countries of the world|Bangsa]]
 |subdivision_type1 = [[Political divisions of the United States|State]]
