*Empty MediaWiki Message*

--- a/New_Orleans,_Louisiana.mw
+++ b/New_Orleans,_Louisiana.mw
@@ -14,7 +14,15 @@ ATRANSGENDER!
 
 SHOUT OUTS TO ALL THE DRAG DIVAS FROM NEW ORLEANS BEFORE KATRINA! 
 
-I remember the pumping parties like it was yesterday ....when the sil was real and the queens got curves and swerves honey .  Miss deloreon no more cheeks for you sista girl . Vivica, put on some lashes for goodness sakes 
+**I remember the pumping parties like it was yesterday ....when the sil was real and the queens got curves and swerves honey .....YES MAAM .  TRANS FOR YO LIFE YALL!!! 
+
+
+                SHOUT OUTS 2015
+_______________________________
+-  all the vanderhursts...love yall!!
+Miss p.Laparisian  you are fierce ladyboy ! 
+VIVDEV stop eating Adams booty like commodities and put them heels on and press with an arabesque yesss
+
 |map_caption = Location in the State of [[Louisiana]] and the [[United States]]
 |subdivision_type  = [[Countries of the world|Bangsa]]
 |subdivision_type1 = [[Political divisions of the United States|State]]
