*Empty MediaWiki Message*

--- a/Pluton.mw
+++ b/Pluton.mw
@@ -1,3 +1,4 @@
+[[File:Pluto by LORRI, 8 July 2015 (Color).jpg|thumbnail|Pluto]]
 Ing '''Pluto''' ing pekamaragul kareng dwendeng planeta king kekatamung [[Solar System]]. 
 Tuturing yang dating kasyam at tawling [[planeta]] manibat nanyang mediskubre ya nanyang 1930 hanggang August 24, 2006 nanyang dinesisyon na ning IAU (International Astronomical Union) kung nanu ya ing metung a planeta. Gawa ya king [[batu]] ampo king [[yelu]]. Ing orbit na ning Pluto mas marayu ya kesa kareng walung planeta. Neng kai, mas malapit ya pa king aldo kesa king Neptune uling e ya eksaktung [[mabilug]] ing dalan padurut king aldo a tutukyan na. Atin yang atlung bulan ing Pluto, ing [[Charon]], ing Nix ampong ing Hydra. Bagya mu ing dagul ning Pluto king Charon.
 
