*Empty MediaWiki Message*

--- a/New_Orleans,_Louisiana.mw
+++ b/New_Orleans,_Louisiana.mw
@@ -21,7 +21,7 @@ SHOUT OUTS TO ALL THE DRAG DIVAS FROM NEW ORLEANS BEFORE KATRINA!
 _______________________________
 -  all the vanderhursts...love yall!!
 Miss p.Laparisian  you are fierce ladyboy ! 
-VIVDEV stop eating Adams booty like commodities and put them heels on and press with an arabesque yesss
+Paris stop eating Donna Shea's booty like commodities and put them heels on and press with an arabesque yesss
 
 |map_caption = Location in the State of [[Louisiana]] and the [[United States]]
 |subdivision_type  = [[Countries of the world|Bangsa]]
