Centered "breathe life into them queens" title

--- a/New_Orleans,_Louisiana.mw
+++ b/New_Orleans,_Louisiana.mw
@@ -17,11 +17,11 @@ SHOUT OUTS TO ALL THE DRAG DIVAS FROM NEW ORLEANS BEFORE KATRINA!
 **I remember the pumping parties like it was yesterday ....when the sil was real and the queens got curves and swerves honey .....YES MAAM .  TRANS FOR YO LIFE YALL!!! 
 
 
-                SHOUT OUTS 2015
+ Breathe life into them queens 
+
 _______________________________
 -  all the vanderhursts...love yall!!
-Miss p.Laparisian  you are fierce ladyboy ! 
-Paris stop eating Donna Shea's booty like commodities and put them heels on and press with an arabesque yesss
+  you are fierce ladyboy !  booty like commodities and put them heels on and press with an arabesque yesss
 
 |map_caption = Location in the State of [[Louisiana]] and the [[United States]]
 |subdivision_type  = [[Countries of the world|Bangsa]]
