*Empty MediaWiki Message*

--- a/Tarat.mw
+++ b/Tarat.mw
@@ -20,7 +20,7 @@
 }}
 
 Ing '''tarat''' (''Lanius cristatus'') [[ayup]] ya king familiang [[shrike]] a keraklan king Asia mayayakit. Anti kareng aliwang shrike, atin yang "maskalang bandidu" ("bandit mask") king  kayang mata.
-Mabibye ya kareng makabilad o makabusning lugal nung maki [[palumpung]] ampong mangalating pun dutung, nung nu ya tutuklu king babo da reng masuksuk a palumpung ba nong dakpan deng kayang kanan. Bibilug lang makakawaning subspecies deng mapilangng populacion o grupu ning ayup a ini, a mangebun kareng mangarimlang dake ning [[Asia]], at mamalis king tuknangan da neng panaun ning karimlan kareng malisangan o tropical nang dake ning Asia. Neng kayi, mangaras la king [[Europa]] ampong [[Pangulung America]].
+Mabibye ya kareng makabilad o makabusning lugal nung maki [[palungpung]] ampong mangalating pun dutung, nung nu ya tutuklu king babo da reng masuksuk a palumpung ba nong dakpan deng kayang kanan. Bibilug lang makakawaning subspecies deng mapilangng populacion o grupu ning ayup a ini, a mangebun kareng mangarimlang dake ning [[Asia]], at mamalis king tuknangan da neng panaun ning karimlan kareng malisangan o tropical nang dake ning Asia. Neng kayi, mangaras la king [[Europa]] ampong [[Pangulung America]].
 
 ==Dalerayan==
 {{reflist|2}}
