*Empty MediaWiki Message*

--- a/Luklak.mw
+++ b/Luklak.mw
@@ -19,7 +19,7 @@ Ing '''luklak''' (''Pycnonotus goiavier''), a '''yellow-vented bulbul''' king In
 
 Mayayakit ya kareng miyayaliwang lugal a "malinis" o makabilad, oneng e king kakewan o king pulu. Metung ya kareng ayup a maralas diling mayayakit kareng lugal a tatamnan maki asikan. Balamu mamalis la o magbayung tuknangan, at andat kayi, lilibut lang lugal.    
 
-Ing sale na o pugad ning luklak másalikut ya oneng mabuya ya, bukud king buyagyag o malagad (e masiksik) pangagawa, malalam, ampong kagulis tasa o sarung gawa king dikut, bulung, yamut, tangkeng baging, ampong mangalating sanga. Anti yang magulu manibat king kilwal ing sale,  oneng malinis ya king kilub, at matatakpan yang lambal tanaman (''plant fibers''). Mititikdo ya kareng miyayaliwang lugal, manibat kareng mangabababang palumpung (''low bushes'') angga kareng mangatas a pun dutung. Metung yang species ining sane kareng tau, at neng kai, magsale ya angga kareng mula o hardin. Mangebun yang adwa anggang limang ebun ing luklak manibat Febrero anggang Junio.     
+Ing sale na o pugad ning luklak másalikut ya oneng mabuya ya, bukud king buyagyag o malagad (e masiksik) pangagawa, malalam, ampong kagulis tasa o sarung gawa king dikut, bulung, yamut, tangkeng baging, ampong mangalating sanga. Anti yang magulu manibat king kilwal ing sale,  oneng malinis ya king kilub, at matatakpan yang lambal tanaman (''plant fibers''). Mititikdo ya kareng miyayaliwang lugal, manibat kareng mangabababang [[palungpung]] (''low bushes'') angga kareng mangatas a pun dutung. Metung yang species ining sane kareng tau, at neng kai, magsale ya angga kareng mula o hardin. Mangebun yang adwa anggang limang ebun ing luklak manibat Febrero anggang Junio.     
 
 Mangalating prutas o bungang dutung ampong berry ing kakanan da reng luklak. Sisipsip la muring nectar, tutuktukan do reng mangalating punla, at kakanan do reng aliwang ayup-ayupan o insektu. 
 
