--- a/Pun_Bulung.mw
+++ b/Pun_Bulung.mw
@@ -33,8 +33,8 @@ __NOTOC__
 |-
 |style="color:#000;"| <!--{{Potd|width=300|float=left|lang=pam}}-->
 
-[[File:Tallinn Toompea Upper Old Town 2013.jpg|500px|center|]]
-         '''Ing Babo Matuang Balen ning Tallinn'''
+[[File:Pluto by LORRI and Ralph, 13 July 2015.jpg|500px|center|]]
+         '''Ing planetang Pluto (LORRI and Ralph instruments ay ati lu king New Horizons spacecraft)'''
 
 
 
