([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Vijayawadahill.JPG]] → [[File:Vijayawada from Gandhi Hill.jpg]] [[c:COM:FR#reasons|File renaming criterion #2]]: To change from a meaningless or ambiguous name to a name that describes what the image di...

--- a/Vijayawada.mw
+++ b/Vijayawada.mw
@@ -3,7 +3,7 @@
 |native_name             = విజయవాడ Vijayawada
 |other_name              = Bezawada
 |state_name              = Andhra Pradesh
-|skyline                 = vijayawadahill.JPG
+|skyline                 = Vijayawada from Gandhi Hill.jpg
 |skyline_caption         = Ing Vijayawada ibat king babo
 |latd                    = 16.516
 |longd                   = 80.616
