Miurung la reng in-edit nang [[Special:Contributions/180.191.103.163|180.191.103.163]] ([[User talk:180.191.103.163|Pamisabi-sabi]]); binalik neng [[User:Addbot|Addbot]] king tauling bersion

--- a/Plais.mw
+++ b/Plais.mw
@@ -1,4 +1,5 @@
-ang plais ay ginagamit pangbunot nang matitigas na ngipin 
+[[Image:Needle nose pliers.jpg|thumb|[[Plais a needle-nose]]]]
+Deng '''plais''' (‘’pliers’’ king Ingles) [[kasangkapan]] lang gamat, at ing pekamaulaga rang sangkan, ya pin ing pamanalan kareng bage kapamilatan ning [[leverage]]. Megawa la reng plais para kareng miyayaliwang gamit, at miyayaliwa la tabas panyipit ba ra lang talnan, idurut, igutan o sipitan deng dakal a uri da reng bage. Magagamit ya ing kasangkapan a iti kareng dakal a obra o propesion nung nu ya magagamit ing gamat. Dakal muring plais a maliaring gamitan king pamamutut. 
 
 ==Amlat==
 Meimbentu la king [[Europa]] kanitang manga aduang libung banua bayu i Cristo [[2000 BC]] bang magsilbing panalan kareng mangapaling bage (keraklan ing [[bakal]], potang papandayan de iti king [[palian]] (anvil). Kayabe la kareng mangatuang diling larawan da reng plais detang papakit king dios a Griegung i [[Hephaestus]] king kayang pandayan. Ngeni, [[tongs]] ing keraklan dang aus karing panalan kareng bageng mapali. Merakal la bilang deng diseniu da reng plais aniang meimbentu la reng miyayaliwang bageng tatalnan da kareti: [[sapatus kabayu]], [[w:fastener]], [[kawad]], [[w:Water pipe|tubong danum]], ampong piesang gagamitan king kurienti ampong electronics.  
