*Empty MediaWiki Message*

--- a/Boyko_Borisov.mw
+++ b/Boyko_Borisov.mw
@@ -1,6 +1,6 @@
 {{Infobox officeholder
 |name         = Boyko Borisov<br />{{small|Бойко Борисов}}
-|image        = BBorisov EPP Summit March 2011.jpg
+|image        = Boyko Borisov EPP 2014.jpg
 |office       = [[Pun Ministru ning Bulgaria]]
 |president    = [[Georgi Parvanov]]<br />[[Rosen Plevneliev]]
 |deputy       = [[Simeon Djankov]]<br />[[Tsvetan Tsvetanov]]
