*Empty MediaWiki Message*

--- a/Template:Guestbook_and_Help_for_Non-Kapampangan_Speakers.mw
+++ b/Template:Guestbook_and_Help_for_Non-Kapampangan_Speakers.mw
@@ -1,4 +1,3 @@
 <div style="margin-bottom:10px; text-align:center; padding:15px; color:black; background-color:#50C878; border:5px solid #6F4E37">
 [[Image:Flag of the Philippines.svg|center|175px]]<br>
-<span style="font-size: 1.8em; line-height: 1em">'''This is a page for non-Kapampangan speakers to discuss anything related to the Kapampangan Wikipedia'''.</span><br/><br>[[Image:Kapampangan-speaking regions.png|center|175px]]<br/> You can also request assistance for your works on the Kapampangan Wikipedia. <br/> <small> ''(See also: [[Wikipedia:Embahada|WP:Embassy]])''</small><br/>
-[[Image:Coffe_time.jpg|center|100px]]</div>
+<span style="font-size: 1.8em; line-height: 1em">'''This is a page for non-Kapampangan speakers to discuss anything related to the Kapampangan Wikipedia'''.</span><br/><br>[[Image:Kapampangan-speaking regions.png|center|175px]]<br/> You can also request assistance for your works on the Kapampangan Wikipedia.<br/>[[Image:Coffe_time.jpg|center|100px]]<br><small> ''(See also: [[Wikipedia:Embahada|WP:Embassy]])''<br>''Note that Kapampangan Wikipedia users may primarily assist you either in English or Tagalog/Filipino.''</small><br/></div>
