*Empty MediaWiki Message*

--- a/Wikipedia:Embahada.mw
+++ b/Wikipedia:Embahada.mw
@@ -1,3 +1,6 @@
+<div class="plainlinks" style="background-color: #7bceff; border: 1px solid #00a5ff; color: black; font-weight: bold; margin: 2em 0 1em; padding: .5em 1em; vertical-align: middle; clear: both;">
+Ini ing Embahada Kapampangan.</span></div></div>
+
 {{Embahada}}
 
 Ing [[Wikipedia:Guestbook and Help for Non-Kapampangan Speakers]] magpalagwa yang posibilidad kareng aliwang tagagamit king aliwang amanu bukud king Amanung Kapampangan.
