*Empty MediaWiki Message*

--- a/Star_Wars.mw
+++ b/Star_Wars.mw
@@ -1,1 +1,21 @@
+'''''Star Wars'''''. Lucasfilm LTD. Tauli yang ining bulung Darth Vader. 
 
+Star Wars Episode I: The Phantom Menace (1999)
+
+Star Wars Episode II: Attack of the Clones (2002) 
+
+Star Wars Episode III: Revenge of the Sith (2005)
+
+Star Wars Episode IV: A New Hope (1977) Star Wars (1977)
+
+Star Wars Episode V: The Empire Strikes Back (1980) The Empire Strikes Back (1980)
+
+Star Wars Episode VI: Return of the Jedi (1983) Return of the Jedi (1983)
+
+Star Wars Episode VII: The Force Awakens (2015) Star Wars The Force Awakens (2015)
+
+Star Wars Episode VIII (2017)
+
+Star Wars Episode IX (2019)
+
+George Lucas. 20th Century Fox. Disney.
