*Empty MediaWiki Message*

--- a/Star_Wars.mw
+++ b/Star_Wars.mw
@@ -14,8 +14,8 @@ Star Wars Episode VI: Return of the Jedi (1983) Return of the Jedi (1983)
 
 Star Wars Episode VII: The Force Awakens (2015) Star Wars The Force Awakens (2015)
 
-Star Wars Episode VIII (2017)
+Star Wars Episode VIII 
 
-Star Wars Episode IX (2019)
+Star Wars Episode IX 
 
 George Lucas. 20th Century Fox. Disney.
