*Empty MediaWiki Message*

--- a/Template:Pun_Bulung%2FInterwiki.mw
+++ b/Template:Pun_Bulung%2FInterwiki.mw
@@ -1,4 +1,4 @@
 <includeonly>
-[[ar:]] [[bg:]] [[bpy:]] [[bs:]] [[ca:]] [[ce:]] [[cs:]] [[da:]] [[de:]] [[el:]] [[en:]] [[eo:]] [[es:]] [[et:]] [[eu:]] [[fa:]] [[fi:]] [[fr:]] [[gl:]] [[he:]] [[hr:]] [[id:]] [[is:]] [[it:]] [[ja:]] [[ka:]] [[ko:]] [[lb:]] [[lt:]] [[hu:]] [[ms:]] [[nl:]] [[nn:]] [[no:]] [[pl:]] [[pt:]] [[ro:]] [[ru:]] [[sk:]] [[simple:]] [[sl:]] [[sr:]] [[sv:]] [[th:]] [[tr:]] [[uk:]] [[vi:]] [[vo:]] [[zh:]] [[zh-classical:]] [[zh-yue:]]
+[[ar:]] [[bg:]] [[bpy:]] [[bs:]] [[ca:]] [[ce:]] [[cs:]] [[da:]] [[de:]] [[el:]] [[en:]] [[eo:]] [[es:]] [[et:]] [[eu:]] [[fa:]] [[fi:]] [[fr:]] [[gl:]] [[he:]] [[hr:]] [[id:]] [[is:]] [[it:]] [[ja:]] [[ka:]] [[ko:]] [[la:]] [[lb:]] [[lt:]] [[hu:]] [[ms:]] [[nl:]] [[nn:]] [[no:]] [[pl:]] [[pt:]] [[ro:]] [[ru:]] [[sa:]] [[sk:]] [[simple:]] [[sl:]] [[sr:]] [[sv:]] [[th:]] [[tr:]] [[uk:]] [[vi:]] [[vo:]] [[zh:]] [[zh-classical:]] [[zh-yue:]]
 </includeonly>
 {{noexternallanglinks}}
