--- a/Pun_Bulung.mw
+++ b/Pun_Bulung.mw
@@ -158,4 +158,6 @@ Nung bisa kang gawang bayung bulung, munta kayu king [[m:Help:Starting a new pag
 </small></i></b></center>
 <center><b><small>
 
+{{Pun Bulung/Interwiki}}
+
 </div>
