*Empty MediaWiki Message*

--- a/Wonder_Girls.mw
+++ b/Wonder_Girls.mw
@@ -1,4 +1,5 @@
-Ing '''Wonders Girls''' metung yang grupung talakanta king [[Mauling Korea]].
+[[Image:Wonder Girls in 2011 Korea Entertainment Awards.jpg|thumb]]
+Ing '''Wonders Girls''' (원더걸스) metung yang grupung talakanta king [[Mauling Korea]].
 
 ==Suglung Palwal==
 {{Commons}}
