--- a/Łobez.mw
+++ b/Łobez.mw
@@ -1,5 +1,5 @@
 [[Image:Lobez main street.jpg|thumbnail|170px|right|Łobez]]
-
+[[Image:Łobez-Polska.png|thumbnail|170px|right|Łobez - [[Poland]]]]
 Ing '''Łobez''' metung yang malating balen king aslagang dake ning  [[Poland]], atin 10,438 pakatuknang (2014), atiu keng [[Łobez County]] ning [[West Pomerania Voivodship]], keng pampang ning ilug [[Rega]].
 == Populasyun ==
 <timeline>
