*Empty MediaWiki Message*

--- a/Bangtan_Boys.mw
+++ b/Bangtan_Boys.mw
@@ -1,6 +1,40 @@
+{{Infobox musical artist
+|name            = Bangtan Boys
+|image           = Bangtan Boys in October 2013.jpg
+|landscape       = yes
+|caption         = Bangtan Boys at Seoul Plaza, Jung-gu, Seoul, in October 2013. <br />From left to right: V, Suga, Jin, Jungkook, Rap Monster, Jimin, J-hope
+|alias           = {{flatlist|
+*BTS
+*Bulletproof Boy Scouts
+*{{no wrap|Bangtan Sonyeondan}}}}
+|background      = group_or_band
+|origin          = [[Seoul]], South Korea
+|genre           = {{flatlist|
+*[[K-pop]]
+*[[Hip-Hop]]
+*[[R&B]]
+*[[Dance music|Dance]]
+}}
+|years_active    = {{start date|2013}}–present
+|label           = {{flatlist|
+*[[Big Hit Entertainment]]
+*[[Pony Canyon]]}}
+|associated_acts =
+|current_members =
+*Jin
+*Suga
+*J-Hope
+*Rap Monster([[Kim Nam-joon ]])
+*Jimin
+*V 
+*Jungkook 
+
+|website         = {{url|bts.ibighit.com}}
+}}
 {{Infobox Korean name
 |hangul = 방탄소년단
 |hanja  = 防彈少年團
+|image  = Bangtan Boys in October 2013.jpg
 |rr     = Bangtan Sonyeondan
 |mr     = Pangt'an Sonyǒndan
 }}
