--- a/Yoo_Ah-in.mw
+++ b/Yoo_Ah-in.mw
@@ -6,3 +6,6 @@ I '''Yoo Ah-in''' ([[Amanung Koreanu|Koreanu]]:유아인, [[Hanja]]: 劉亞仁),
 * [http://cafe.daum.net/dfhdfhfgjsdftergg/ Yoo Ah-in Fan Cafe] sa [[Daum Communications|Daum]]
 
 {{Suli}}
+
+[[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
