*Empty MediaWiki Message*

--- a/Washington.mw
+++ b/Washington.mw
@@ -9,7 +9,7 @@
  Nickname = The Evergreen State |
  Capital = [[Olympia, Washington|Olympia]] |
  LargestCity = [[Seattle, Washington|Seattle]] |
- Governor = [[Christine Gregoire]] (D)|
+ Governor = [[Jay Inslee]] (D)|
  Senators = [[Patty Murray]] (D)
 [[Maria Cantwell]] (D) |
  PostalAbbreviation = WA |
