--- a/Sasalpantaya_Ku.mw
+++ b/Sasalpantaya_Ku.mw
@@ -1,5 +1,6 @@
-===Baryanting Filipino===
-Sasalpantaya ku king Dios, Ibpang mayupayang tutu, linalang king banwa at yatu.<br />
+Baryanting Filipino
+
+sasalpantaya  ku king Dios, Ibpang mayupayang tutu, linalang king banwa at yatu.<br />
 At kang Hesukristong Anak nang Bugtung a Guinu tamu.<br />
 Pengagli Ya king upaya ning Banal a Espiritu, mibayit Ya kang Santa Mariang Birhen.<br />
 Linasa Ya lalam nang upaya nang Ponsyo Pilato. Mipaku ya king krus, mete Ya at micutcut.<br />
