*Empty MediaWiki Message*

--- a/Oregon.mw
+++ b/Oregon.mw
@@ -9,7 +9,7 @@
  Nickname = Beaver State |
  Capital = [[Salem, Oregon|Salem]] |
  LargestCity = [[Portland, Oregon|Portland]] |
- Governor = [[Ted Kulongoski]] (D)|
+ Governor = [[Kate Brown]] (D)|
  Senators = [[Ron Wyden]] (D)
 [[Gordon Harold Smith|Gordon Smith]] (R) |
  PostalAbbreviation = OR |
