--- a/Sasalpantaya_Ku.mw
+++ b/Sasalpantaya_Ku.mw
@@ -24,3 +24,5 @@ ban mucum caring mabie ampon mengamate.
 Sasalpantaya cu qñg Banal a Espiritu, qñg Santa Iglesia Catolica, qñg pamisamac ding Santos,<br /> 
 qñg pangapatauadda ring casalanan, qñg pangasubli rang mie ring mete, at qñg bie alang angga.<br />
 Amen.
+
+[[Category:Ding Kapampangan Pangadi]]
