*Empty MediaWiki Message*

--- a/Sasalpantaya_Ku.mw
+++ b/Sasalpantaya_Ku.mw
@@ -25,4 +25,4 @@ Sasalpantaya cu qñg Banal a Espiritu, qñg Santa Iglesia Catolica, qñg pamisam
 qñg pangapatauadda ring casalanan, qñg pangasubli rang mie ring mete, at qñg bie alang angga.<br />
 Amen.
 
-[[Category:Ding Kapampangan Pangadi]]
+[[Category:Kapampangan Pangadi]]
