*Empty MediaWiki Message*

--- a/New_Orleans,_Louisiana.mw
+++ b/New_Orleans,_Louisiana.mw
@@ -1,28 +1,10 @@
-{{Infobox City |official_name =New Orleans| GOT NOLA ? 
-|nickname = "HOME OF THE TWERKING CLASS QUEENS" 
-We BOUT DAT TWERK
-
-We BOUT DEM SAINTS
-
-We BOUT THIS LIFE 
-
-WE ARE THE QUEENS OF NEW ORLEANS .....
-
-AMEN   
-AWOMAN
-ATRANSGENDER!
-
-SHOUT OUTS TO ALL THE DRAG DIVAS FROM NEW ORLEANS BEFORE KATRINA! 
-
-**I remember the pumping parties like it was yesterday ....when the sil was real and the queens got curves and swerves honey .....YES MAAM .  TRANS FOR YO LIFE YALL!!! 
-
-
- Breathe life into them queens 
-
-_______________________________
--  all the vanderhursts...love yall!!
-  you are fierce ladyboy !  booty like commodities and put them heels on and press with an arabesque yesss
-
+{{Infobox City |official_name =Lakanbalen ning New Orleans|native_name=Ville de La Nouvelle-Orléans
+|nickname = "The Crescent City", "The Big Easy", "The City That Care Forgot", "NOLA" (acronym for New Orleans, LA)
+|website = http://www.cityofno.com/portal.aspx
+|image_skyline = New Orleans Skyline from Uptown.jpg
+|image_flag =Flag_of_New_Orleans,_Louisiana.svg
+|image_seal =
+|image_map =Map_of_Louisiana_and_USA_highlighting_Orleans_Parish.png
 |map_caption = Location in the State of [[Louisiana]] and the [[United States]]
 |subdivision_type  = [[Countries of the world|Bangsa]]
 |subdivision_type1 = [[Political divisions of the United States|State]]
@@ -103,7 +85,7 @@ _______________________________
 [[Category:Coastal cities in the United States]]
 [[Category:Pirates of the Caribbean locations]]
 
-
+{{Link FA|eo}}
 
 [[fa:نیواورلئان]]
 [[gl:Nova Orleáns - New Orleans, Luisiana]]
