*Empty MediaWiki Message*

--- a/Amanung_Sekapan.mw
+++ b/Amanung_Sekapan.mw
@@ -1,3 +1,5 @@
 Ing '''Amanung Sekapan''' metung ya kareng [[Deng amanung Kajang|amanung Kajang]] king [[Sarawak]], [[Malaysia]].
 
 {{Suli}}
+
+[[Category:Deng amanung Awstronesyu]]
