*Empty MediaWiki Message*

--- a/Sasalpantaya_Ku.mw
+++ b/Sasalpantaya_Ku.mw
@@ -1,4 +1,4 @@
-Baryanting Filipino
+===Baryanting Filipino===
 
 sasalpantaya  ku king Dios, Ibpang mayupayang tutu, linalang king banwa at yatu.<br />
 At kang Hesukristong Anak nang Bugtung a Guinu tamu.<br />
