*Empty MediaWiki Message*

--- a/Amanung_Biatah.mw
+++ b/Amanung_Biatah.mw
@@ -1,4 +1,4 @@
-Ing '''Amanung Biatah''' metung ya kareng pamyalita king [[Borneo]].
+Ing '''Amanung Biatah Bidayuh''' metung ya kareng pamyalita king [[Borneo]].
 
 {{Suli}}
 
