Removing "Shijiazhuang_montage.png", it has been deleted from Commons by [[commons:User:Didym|Didym]] because: Per [[:c:Commons:Deletion requests/File:Shijiazhuang montage.png|]].

--- a/Shijiazhuang.mw
+++ b/Shijiazhuang.mw
@@ -2,7 +2,7 @@
 |official_name          = {{longitem|style=font-size:110%;|{{nobold|{{lang|zh-cn|石家庄市}}}}}}
 |native_name            = {{lower|0.2em|{{nobold|{{lang|zh-hans|石家庄}}}}}}
 |settlement_type        = [[Lakanbalen a kadaneng prefecture]]
-|image_skyline          = Shijiazhuang montage.png
+|image_skyline          =
 |imagesize              =
 |image_caption          = Padurut king wanan manibat king babo: Deng gusali ning Shijiazhuang, ing Hebei Art Center, ing Pisulagpong Internasyunal ning Shijiazhuang Zhengding, ing Panalala kareng Martir (''Martyrs' Memorial'')
 |image_map              = Location of Shijiazhuang Prefecture within Hebei (China).png
