Removing "Xiangfan_city.jpg", it has been deleted from Commons by [[commons:User:Yann|Yann]] because: Copyright violation, see [[:c:Commons:Licensing|]].

--- a/Xiangyang.mw
+++ b/Xiangyang.mw
@@ -11,7 +11,7 @@
 |total_type = <!-- to set a non-standard label for total area and population rows -->
 |motto =
 <!-- images and maps ----------->
-|image_skyline = Xiangfan city.jpg
+|image_skyline =
 |imagesize =280px
 |image_caption = Babo:Bista da reng firework neng at Lunar New Year king lele ning Ilug Han, libutad a kayli: Great Virtue Temple, Libutad a wanan:Longzhong scenic area, Lalam a babong wanan:Bista ning Kastilyu ning Xiangyang a mayayakit ya ing Green Shadow Wall ampo ing Huchang canal, Lalam a mababang kayli:Bista ning mauling dane ning Huchang canal, Lalam a wanan:Zhongxuan Gate
 |image_flag =
