--- a/Madagaskar.mw
+++ b/Madagaskar.mw
@@ -15,8 +15,8 @@ latd=18|latm=55|latNS=S|longd=47|longm=31|longEW=E|
 government_type          = [[Republic]] |
 leader_title1            = [[List of Presidents of Madagascar|President]] |
 leader_title2            = [[List of Prime Ministers of Madagascar|Prime Minister]] |
-leader_name1             = [[Marc Ravalomanana]] |
-leader_name2             = [[Jacques Sylla]] |
+leader_name1             = [[Hery Rajaonarimampianina]] |
+leader_name2             = [[Jean Ravelonarivo]] |
 largest_city             = [[Antananarivo]] |
 area                     = 587,041 |
 areami²                  = 226,597 <!-- Do not remove per [[WP:MOSNUM]] -->|
