--- a/Malawi.mw
+++ b/Malawi.mw
@@ -12,7 +12,7 @@ capital                  = [[Lilongwe]] |
 latd=13|latm=57|latNS=S|longd=33|longm=42|longEW=E|
 government_type          = [[Multi-party]] [[democracy]] |
 leader_title1            = [[List of Presidents of Malawi|President]] |
-leader_name1             = [[Bingu wa Mutharika]] |
+leader_name1             = [[Peter Mutharika]] |
 largest_city             = [[Blantyre, Malawi|Blantyre]] |
 area                     = 118,480 |
 areami²                =  45,733<!-- Do not remove per [[WP:MOSNUM]] --> |
