--- a/Martiliu.mw
+++ b/Martiliu.mw
@@ -57,6 +57,8 @@ Kareng aluaging gagawang [[w:framing (construction)|kuadru]], lalu na kareng mas
 * [http://www.diracdelta.co.uk/science/source/h/a/hammer/source.html Hammer types] images and descriptions.
 * [http://www.hammermuseum.org The Hammer Museum] The world's only museum about the place of the hammer in human history.
 
+{{Commons category|Hammers}}
+
 {{Types of tools}}
 
 [[Category:Hammers| ]]
