--- a/Nigeria.mw
+++ b/Nigeria.mw
@@ -2,7 +2,7 @@
 |native_name = Federal Republic ning Nigeria
 |common_name = Nigeria
 |image_flag = Flag of Nigeria.svg
-|image_coat = Nigeriaarms22.PNG
+|image_coat = Coat of Arms of Nigeria.svg
 |image_map = LocationNigeria.png
 |national_motto = Unity and Faith, Peace and Progress
 |national_anthem = [[Arise O Compatriots, Nigeria's Call Obey]]
