Replacing Flag_of_the_Israel_Defence_Forces.svg with [[File:Flag_of_the_Israel_Defense_Forces.svg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: typo).

--- a/Benjamin_Netanyahu.mw
+++ b/Benjamin_Netanyahu.mw
@@ -47,7 +47,7 @@
 |religion       = [[Judaism]]
 |signature      = Benjamin Netanyahu Signature.svg
 |allegiance     = {{flag|Israel}}
-|branch         = [[File:Flag of the Israel Defence Forces.svg|30px]] [[Israel Defense Forces|Israel Defense Forces]]
+|branch         = [[File:Flag of the Israel Defense Forces.svg|30px]] [[Israel Defense Forces|Israel Defense Forces]]
 |rank           = [[File:IDF seren.svg|30px]] [[Israel Defense Forces ranks|Captain]]
 |serviceyears   = 1967–1973
 |unit           = [[Sayeret Matkal]]
