--- a/Amanung_Jangkang.mw
+++ b/Amanung_Jangkang.mw
@@ -1,4 +1,4 @@
-Ing '''Amanung Jangkang''' (''Jongkang'') metung ya kareng pamyalita king [[Borneo]].
+Ing '''Amanung Jangkang''' (''Djongkang'') metung ya kareng pamyalita king [[Borneo]].
 
 {{Suli}}
 
