--- a/Amanung_Melanau.mw
+++ b/Amanung_Melanau.mw
@@ -1,4 +1,7 @@
-Ing '''Amanung Melanau''' metung ya kareng pamyalita king [[Borneo]].
+Ing '''Amanung Melanau''' metung ya kareng pamyalita king [[Borneo]]. Atin ya marakal a diyalektu—Mukah-Oya, Balingian, Bruit, Dalat, Igan, Sarikei, Segahan, Prehan, Segalang, at Siteng.<ref>Raymond G. Gordon, Jr, ed.  2005.  ''Ethnologue:  Languages of the World''.  15th edition.  Dallas:  Summer Institute of Linguistics.</ref>
+
+==Dalerayan==
+{{reflist}}
 
 {{Suli}}
 
