*Empty MediaWiki Message*

--- a/Amanung_Serudung.mw
+++ b/Amanung_Serudung.mw
@@ -1,4 +1,4 @@
-Ing '''Serudung Murut''' metung ya kareng pamyalita king [[Borneo]].
+Ing '''Serudung Murut''' (''Tidong'') metung ya kareng pamyalita king [[Borneo]].
 
 {{Suli}}
 
