One picture in higher resolution

--- a/Lorraine_(labuad).mw
+++ b/Lorraine_(labuad).mw
@@ -25,7 +25,7 @@ departments             = [[Meurthe-et-Moselle]]<br />[[Meuse]]<br />[[Moselle]]
 image_map                = Lorraine map.png|
 footnotes=|
 |}}
-[[File:Place-stanislaus-nord-nancy.jpg|thumb|right|[[Nancy]] - Place Stanislas - Arc de triomphe]]
+[[File:Nancy Porte Here BW 2015-07-18 13-45-28.jpg|thumb|right|[[Nancy]] - Place Stanislas - Arc de triomphe]]
 Ing '''Lorraine''' ({{lang-de|Lothringen}}) metung ya kareng  26 a ''[[région in France|labuad]]'' ning [[France]]. Ding kayang aduang lakanbalen ilapin deng [[Metz]] (administratibung tungku) at [[Nancy]] (maamlat a tungku). 
 
 == Geografia ==
