*Empty MediaWiki Message*

--- a/Pransiya.mw
+++ b/Pransiya.mw
@@ -1,10 +1,10 @@
 {| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big>'''''République française''<br />Republika ning Frances'''</big>
+|+<big>'''''République française''<br />Republikang Pranses'''</big>
 | align="center" colspan="2"|
 {| border=0 cellpadding=2 cellspacing=0 style="background:#f9f9f9; text-align:center;"
 | width="130px"| [[File:Flag_of_France.svg|125px|Bandera ning France]] || align=center width=130px|[[File:Armoiries république française.svg|115px|Coat of arms of France]]
 |-
-| width="130px"| ([[Bandera ning France]]) || align=center width=130px| ([[Coat of arms of France|Emblem of France]])
+| width="130px"| ([[Bandera ning Pransya]]) || align=center width=130px| ([[Coat of arms of France|Emblem of France]])
 |}
 |-
 | align=center colspan=2 |[[List of state mottos|Motto]]: [[French language|French]]: ''[[Liberté, Égalité, Fraternité]]''<br />([[English language|English]]: "Liberty, Equality, Fraternity")
