*Empty MediaWiki Message*

--- a/Tarlac.mw
+++ b/Tarlac.mw
@@ -1,4 +1,4 @@
-:''Nung itang syudad ing paintunan mu, lon me ing [[Tarlac Lakanbalen]]''
+:''Nung itang lakanbalen (syudad) ing payintunan mu, lawen me ing [[Tarlac Lakanbalen]]''
 
 Ing '''Tarlac''' metung yang [[Ding Lalawigan ning Filipinas|lalawigan]] ning [[Filipinas]] a mayayakit king [[Ding Labuad ning Filipinas|Labuad]] ning [[Kalibudtarang Luzon|Kalibudtarang (Central) Luzon]]. Ing [[Tarlac Lakanbalen]] ing kayang balen tungku. Atyu king pangulu ning Tarlac ing [[Pangasinan]] , king aslagan na ing [[Nueva Ecija]] , king mawli na ing [[Pampanga]] , at king albugan na ing [[Zambales]] .
 
